# crud_api_benchmarks

./: .gitignore  Makefile  README.md  server.s
asm/: Makefile  README.md  bench.sh  entry.s
benchmarks/reports/: compare_all_20260324_140824.md
cpp/: CMakeLists.txt  Makefile  README.md  bench.sh  bench_asm.sh
cpp/include/app/: config.hpp
cpp/include/db/: database.hpp  item_repository.hpp
cpp/include/http/: server_app.hpp
cpp/src/: main.cpp
cpp/src/app/: config.cpp
cpp/src/asm/: asm_bridge.cpp
cpp/src/db/: database.cpp  item_repository.cpp
cpp/src/http/: server_app.cpp
docs/: BUILD_AND_TEST.md  README.md
fortran/: Makefile  README.md  api_example.f90  gen_bulk_payloads.f90
rust/: Cargo.toml  README.md  bench.sh
rust/src/: main.rs
scripts/: build_and_test.sh  build_asm_arm64.sh  bulk_insert.sh  bulk_query.sh  compare_all.sh  compare_load.sh  emit_compare_report.py  fortran_bulk_payload.sh  test_fortran_example.sh
