[package]
name = "api_crud_rust"
version = "0.1.0"
edition = "2021"
description = "Same REST+SQLite API as ../cpp for load comparison"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
